[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/fonts/BlakaHollow-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/fonts/GajrajOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=3]
[ext_resource path="res://scenes/intro.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/images/menubg.jpeg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 125
outline_size = 10
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
mainGameScene = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 522.5, 302 )
scale = Vector2( 3.47, 3.54762 )
texture = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = -21.0
margin_right = 1043.0
margin_bottom = 667.0
custom_constants/margin_right = 125
custom_constants/margin_top = 75
custom_constants/margin_left = 95
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 95.0
margin_top = 75.0
margin_right = 939.0
margin_bottom = 567.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 844.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "LABYRINTH"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 844.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 844.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 794.0
margin_bottom = 88.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 844.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 794.0
margin_bottom = 88.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Load Game"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 844.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 794.0
margin_bottom = 88.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Options"

[connection signal="button_up" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_NewGameButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/OptionsButton" to="." method="_on_OptionsButton_pressed"]
